# anker-solix-exporter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md  flake.nix  grafana_dashboard.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
src/: config.rs  main.rs  metrics.rs
src/solix/: api.rs  credentials.rs  data.rs  mod.rs
