[package]
name = "anker-solix-exporter"
version = "1.1.0"
edition = "2021"
license-file = "LICENSE"
authors = ["cyl3x <cyl3x@posteo.de>"]
repository = "https://github.com/cyl3x/shopware-devenv"
description = "Prometheus exporter for Anker Solix E1600"
readme = "README.md"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
env_logger = "0.11.6"
prometheus-client = "0.23.1"
md-5 = "0.10.6"
p256 = { version = "0.13.2", features = ["ecdh"] }
aes = "0.8.4"
cipher = "0.4.4"
cbc = "0.1.2"
hex = "0.4.3"
log = "0.4.27"
tiny_http = "0.12.0"
ureq = { version = "3.0.12", features = ["json"] }
serde_with = "3.14.0"
thiserror = "2.0.12"
figment = { version = "0.10.19", features = ["env", "json", "serde_json"] }
signal-hook = "0.3.18"
